--- a/time.html
+++ b/time.html
@@ -3,13 +3,21 @@
    <head>
       <title>HTML Backgorund Color</title>
    </head>
-   <body style="background-color:rgb(201, 235, 255);">
-      <h1><p style="lighting-color: rgb(95, 190, 190);">
-      *************************************************Welcome*********************************************</p></h1><break>
+   <body style="background-color:rgb(201, 235, 255);" style= "text-align: center;" style="margin-bottom: 20mm;animevibe"
+      <p> <style= "lighting-color: rgb(95, 190, 190);"> *Welcome* </p></break>
+      
 
       
-      <input type="button" style="background-color: #4c8bf5 ; "  style="border: 2mm ;google" style="contain{}" onclick="location.href='https://www.google.com/';" value = "google" />
-      <input type="button" style="background-color: #FF0000; ; "  style="border: 2mm ;google" onclick="location.href='https://www.Youtube.com';" value = "Youtube" />
-      </break>
+      <input type="button" style="background-color: #4c8bf5; "  style="border: 2mm ;google" onclick="location.href='https://www.google.com/';" value = "google" /><break>
+      <input type="button" style="background-color: #FF0000;  "  style="border: 2mm ;youtube" onclick="location.href='https://www.Youtube.com';" value = "Youtube" /><break>
+      <input type="button" style="background-color: grey;  "  style="border: 2mm ;animevibe" onclick="location.href='https://lite.animevibe.se/';" value = "animevibe" ; /><break>
+      <input type="button" style="background-color: green; "  style="border: 2mm ;"  onclick="location.href='https://mail.google.com/';" value = "G mail" /><break>
+      <input type="button" style="background-color: azure;  "  style="border: 2mm ;" onclick="location.href='https://play.google.com/';" value = "Play store" /><break>
+      <input type="button" style="background-color: yellow;  "  style="border: 2mm ;" onclick="location.href='https://www.hotstar.com/in';" value = "Hotstar" ; /><break>
+   
+   
+   
+   
+   </break>
     </body>
 </html>
