--- a/style.HTML
+++ b/style.HTML
@@ -14,14 +14,15 @@ h1 {
 }
 
 p {
-  font-family: verdana;
+  font-family: 'Times New Roman', Times, serif;
   font-size: 20px;
 }
 </style>
 </head>
 <body>
+aNIL
+<bUTTon onclick=" location.href='https://www.google.com/';"> ANIL</bUTTon>
 
-<
 
 </body>
 </html>
