--- a/time.html
+++ b/time.html
@@ -9,7 +9,7 @@
 
       
       <input type="button" style="background-color: #4c8bf5; "  style="border: 2mm ;google" onclick="location.href='https://www.google.com/';" value = "google" /><break>
-      <input type="button" style="background-color: #FF0000;  "  style="border: 2mm ;youtube" onclick="location.href='https://www.Youtube.com';" value = "Youtube" /><break>
+      <input type="button" style="background-color: #FF0000;  "  style="border: 2mm ;youtube" onclick="location.href='https://www.youtube.com/';" value = "Youtube" /><break>
       <input type="button" style="background-color: grey;  "  style="border: 2mm ;animevibe" onclick="location.href='https://lite.animevibe.se/';" value = "animevibe" ; /><break>
       <input type="button" style="background-color: green; "  style="border: 2mm ;"  onclick="location.href='https://mail.google.com/';" value = "G mail" /><break>
       <input type="button" style="background-color: azure;  "  style="border: 2mm ;" onclick="location.href='https://play.google.com/';" value = "Play store" /><break>
